[gd_scene load_steps=13 format=3 uid="uid://0fccgu7f77gg"]

[ext_resource type="Script" uid="uid://pjpfeiofeqj8" path="res://scripts/settings.gd" id="1_rbmmp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rbmmp"]
bg_color = Color(0.377919, 0.377919, 0.377919, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1dggd"]
bg_color = Color(0.194349, 0.194349, 0.194349, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8e7v8"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_46duy"]
bg_color = Color(0.133333, 0.133333, 0.133333, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j1j16"]
draw_center = false
border_width_left = 10
border_width_right = 10
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y661j"]
bg_color = Color(0.172833, 0.172833, 0.172833, 1)
border_width_left = 10
border_width_right = 10
border_color = Color(0.172549, 0.172549, 0.172549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_slqrs"]
bg_color = Color(0.133333, 0.133333, 0.133333, 1)
draw_center = false
border_width_left = 10
border_width_right = 10
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i47rn"]
bg_color = Color(0.133196, 0.133196, 0.133196, 1)
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rbmmp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ba70"]
bg_color = Color(0.252028, 0.252028, 0.252028, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oej8g"]
bg_color = Color(0, 0, 0, 1)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rbmmp")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.694118)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rbmmp")

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -209.0
offset_top = -228.0
offset_right = 209.0
offset_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1dggd")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.895
offset_bottom = -0.120026
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 1540

[node name="TabContainer" type="TabContainer" parent="Panel/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/side_margin = 30
theme_override_styles/tab_focus = SubResource("StyleBoxFlat_8e7v8")
theme_override_styles/tabbar_background = SubResource("StyleBoxFlat_46duy")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_j1j16")
theme_override_styles/tab_hovered = SubResource("StyleBoxFlat_y661j")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_slqrs")
current_tab = 0

[node name="Graphics" type="Control" parent="Panel/Panel/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel/VBoxContainer/TabContainer/Graphics"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 17.0
offset_top = -2.0
offset_right = -17.0
offset_bottom = 377.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/Panel/VBoxContainer/TabContainer/Graphics/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/Panel/VBoxContainer/TabContainer/Graphics/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
text = "Fullscreen"

[node name="Fullscreen" type="CheckBox" parent="Panel/Panel/VBoxContainer/TabContainer/Graphics/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Panel/VBoxContainer/TabContainer/Graphics/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label2" type="Label" parent="Panel/Panel/VBoxContainer/TabContainer/Graphics/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "Resolution"

[node name="Resolution" type="OptionButton" parent="Panel/Panel/VBoxContainer/TabContainer/Graphics/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
selected = 0
item_count = 2
popup/item_0/text = "1920 x 1080"
popup/item_0/id = 0
popup/item_1/text = "1440 x 900"
popup/item_1/id = 1

[node name="Audio" type="Control" parent="Panel/Panel/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel/VBoxContainer/TabContainer/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 17.0
offset_top = -2.0
offset_right = -17.0
offset_bottom = 379.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Panel/VBoxContainer/TabContainer/Audio/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/Panel/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master Volume"
horizontal_alignment = 1

[node name="Master" type="HSlider" parent="Panel/Panel/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/Panel/VBoxContainer/TabContainer/Audio/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/Panel/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music Volume"
horizontal_alignment = 1

[node name="Music" type="HSlider" parent="Panel/Panel/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/Panel/VBoxContainer/TabContainer/Audio/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/Panel/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "UI Volume"
horizontal_alignment = 1

[node name="UI" type="HSlider" parent="Panel/Panel/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel/Panel/VBoxContainer/TabContainer/Audio/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/Panel/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Game Sounds"
horizontal_alignment = 1

[node name="Game" type="HSlider" parent="Panel/Panel/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Controls" type="Control" parent="Panel/Panel/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel/VBoxContainer/TabContainer/Controls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 17.0
offset_top = -2.0
offset_right = -17.0
offset_bottom = 379.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Panel/VBoxContainer/TabContainer/Controls/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/Panel/VBoxContainer/TabContainer/Controls/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/Panel/VBoxContainer/TabContainer/Controls/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/Panel/VBoxContainer/TabContainer/Controls/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Panel" type="Panel" parent="Panel/Panel"]
layout_mode = 2
anchor_left = 0.002
anchor_top = 0.895
anchor_right = 0.998
anchor_bottom = 1.0
offset_left = -0.836
offset_top = -0.120026
offset_right = 0.835999
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_i47rn")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Panel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 8.0
offset_right = -25.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 10
theme_override_constants/separation = 20

[node name="Apply" type="Button" parent="Panel/Panel/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_rbmmp")
theme_override_styles/hover = SubResource("StyleBoxFlat_3ba70")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oej8g")
text = "Apply"

[node name="Cancel" type="Button" parent="Panel/Panel/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_rbmmp")
theme_override_styles/hover = SubResource("StyleBoxFlat_3ba70")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oej8g")
text = "Cancel"

[node name="Default" type="Button" parent="Panel/Panel/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_rbmmp")
theme_override_styles/hover = SubResource("StyleBoxFlat_3ba70")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oej8g")
text = "Default"

[connection signal="toggled" from="Panel/Panel/VBoxContainer/TabContainer/Graphics/VBoxContainer/HBoxContainer2/Fullscreen" to="." method="_on_check_box_toggled"]
[connection signal="item_selected" from="Panel/Panel/VBoxContainer/TabContainer/Graphics/VBoxContainer/HBoxContainer/Resolution" to="." method="_on_option_button_item_selected"]
[connection signal="value_changed" from="Panel/Panel/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="Panel/Panel/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer2/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Panel/Panel/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer3/UI" to="." method="_on_ui_value_changed"]
[connection signal="value_changed" from="Panel/Panel/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer4/Game" to="." method="_on_game_value_changed"]
[connection signal="pressed" from="Panel/Panel/Panel/HBoxContainer/Apply" to="." method="_on_apply_pressed"]
[connection signal="pressed" from="Panel/Panel/Panel/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Panel/Panel/Panel/HBoxContainer/Default" to="." method="_on_default_pressed"]
